--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,4 +1,25 @@
-<h1><%= @restaurant.name %></h1>
-<p><%= @restaurant.address %></p>
 
-<%= link_to 'Write your review', new_restaurant_review_path(@restaurant) %>
+
+<div class="card">
+  <div class="card-body">
+    <h3 class="pb-3"><%= @restaurant.name %></h3>
+    <p><i><%= @restaurant.category.capitalize %></i></p>
+    <p>Address: <%= @restaurant.address %></p>
+    <p>Contact: <%= @restaurant.phone_number %></p>
+
+    <%= link_to 'Write your review', new_restaurant_review_path(@restaurant) %>
+  </div>
+</div>
+
+<div class="mt-4 mb-3">
+  <h3>Reviews</h3>
+</div>
+
+<% @restaurant.reviews.each do |review| %>
+  <div class="card">
+    <div class="card-body">
+      <p>Rating: <%= review.rating %></p>
+      <p><%= review.content %></p>
+    </div>
+  </div>
+<% end %>
