--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,7 @@
 <h1>New Review</h1>
 
-<%= simple_form_for [@restaurant, @review] do |f| %>
+<%= simple_form_for [@review.restaurant, @review] do |f| %>
+  <%= f.input :rating %>
   <%= f.input :content %>
   <%= f.submit %>
 <% end %>
